# paper-trail

./: .env.example  .gitignore  BUILD.md  CLAUDE.md  LICENSE  README.md  TASKS.md  dev.sh  pyproject.toml
benchmark/: README.md
benchmark/questions/: gidd.json  tabm.json
benchmark/results/: FINDINGS.md  SUMMARY.md  app.js  architecture.css  architecture.html  architecture.js  consistency.json  data.js  index.html  styles.css
benchmark/scripts/: analyze_consistency.py  make_report.py  run_benchmark.py  validate_runs.py
demo/: README.md
demo/backup/: README.md  reset.sh  stage.sh
demo/primary/: README.md  reset.sh  stage.sh
diary/: README.md  claude.md  eb.md
docs/: integration.md  pitch.md  validity.md
docs/backend/: README.md  agent.md  fixtures.md  mcp_config.md  paper_ingester.md  prompts.md  sandbox.md  server.md  subagents.md
docs/frontend/: README.md  app_shell.md  dossier.md  hypothesis_board.md  parser_and_state.md  quick_check.md  styling.md  tool_stream.md
scripts/: README.md  init_demo_repos.sh  preflight.sh
server/: agent.py  artifacts.py  env.py  main.py  mcp_config.py  parser.py  repos.py  runs.py
server/papers/: __init__.py  arxiv_fetcher.py  cache.py  ingester.py  models.py  pdf_parser.py
server/prompts/: failure_classes.md  investigator.md  quick_check.md
server/sandbox/: __init__.py  base.py  local.py
server/subagents/: __init__.py  base.py  code_auditor.py  experiment_runner.py  metric_extractor.py  paper_reader.py  validator.py  (+1 more)
test_data/: README.md
tests/: audit_byprot_run.py  robustness_byprot.py  robustness_gidd.py  robustness_real_papers.py  smoke_abort_e2e.py  smoke_artifacts.py  smoke_auto_pr_fork.py  smoke_env.py  smoke_isic_e2e.py  smoke_muchlinski_e2e.py  smoke_new_subagents.py  smoke_paper_ingester.py  smoke_quickcheck_e2e.py  smoke_sdk.py  smoke_subagents.py  smoke_turn_cap_e2e.py  smoke_warm_start.py  test_parser.py  test_sandbox_local.py
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
(+155 files in other folders)
