[project]
name = "paper-trail"
version = "0.1.0"
description = "Paper Trail — a verification intern for research engineers. Built with Claude Opus 4.7 for the Cerebral Valley hackathon, Apr 2026."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "eb" },
    { name = "Claude (Opus 4.7)" },
]

dependencies = [
    # Agent core
    "claude-agent-sdk>=0.1.0",

    # Web server
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",

    # HTTP client
    "httpx>=0.27.0",

    # Paper ingestion
    "arxiv>=2.1.0",
    "docling>=2.0.0",

    # Data modelling / validation
    "pydantic>=2.8.0",

    # Demo fixtures' runtime dependencies. The conductor/subagent pipeline
    # executes the staged fixture's `eval.py` through the project's venv —
    # these are what those scripts import. Scoped to the scientific-Python
    # stack used by every ML reproducibility fixture we ship.
    "scikit-learn>=1.3",
    "pandas>=2.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]

[tool.uv]
# Cache dependency resolutions so reproducibility doesn't depend on wall-clock
# freshness of PyPI indexes. `uv sync --frozen` uses uv.lock only.
required-version = ">=0.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle + pyflakes
    "I",             # isort
    "B",             # bugbear
    "UP",            # pyupgrade
    "SIM",           # simplify
    "RUF",           # ruff-specific
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = "auto"
testpaths = ["tests"]
